--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.2",
     "framer-motion": "^10.16.5",
+    "gsap": "^3.12.2",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
